--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -84,6 +84,10 @@ body {
 }
 
 /* Link styles */
-a {
+a:not(.no-underline) {
   @apply text-blue-600 hover:text-blue-800 transition-colors;
+}
+
+a.no-underline {
+  @apply text-inherit;
 }
