--- a/src/pages/ranking/index.astro
+++ b/src/pages/ranking/index.astro
@@ -27,13 +27,13 @@ const breadcrumbStructuredData = {
       '@type': 'ListItem',
       position: 1,
       name: 'ホーム',
-      item: 'https://frabjous-taiyaki-460401.netlify.app/'
+      item: 'https://keiba-review.jp/'
     },
     {
       '@type': 'ListItem',
       position: 2,
       name: '総合ランキング',
-      item: 'https://frabjous-taiyaki-460401.netlify.app/ranking/'
+      item: 'https://keiba-review.jp/ranking/'
     }
   ]
 };
