--- a/src/pages/ranking/chuo.astro
+++ b/src/pages/ranking/chuo.astro
@@ -36,19 +36,19 @@ const breadcrumbStructuredData = {
       '@type': 'ListItem',
       position: 1,
       name: 'ホーム',
-      item: 'https://frabjous-taiyaki-460401.netlify.app/'
+      item: 'https://keiba-review.jp/'
     },
     {
       '@type': 'ListItem',
       position: 2,
       name: 'ランキング',
-      item: 'https://frabjous-taiyaki-460401.netlify.app/ranking/'
+      item: 'https://keiba-review.jp/ranking/'
     },
     {
       '@type': 'ListItem',
       position: 3,
       name: categoryLabel,
-      item: `https://frabjous-taiyaki-460401.netlify.app/ranking/${category}/`
+      item: `https://keiba-review.jp/ranking/${category}/`
     }
   ]
 };
